fix invisible icons

--- a/src/frontend/src/styles/colors.scss
+++ b/src/frontend/src/styles/colors.scss
@@ -14,7 +14,6 @@ $sms-color-background: --sms-color-background;
 $sms-colour-danger-zone: --sms-colour-danger-zone;
 
 // cds-overrides
-$cds-overrides--cds-icon-secondary: --cds-icon-secondary;
 $cds-overrides--cds-border-interactive: --cds-border-interactive;
 $cds-overrides--cds-button-primary-hover: --cds-button-primary-hover;
 $cds-overrides--cds-button-primary: --cds-button-primary;
